updating plots on task 5

--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -605,7 +605,8 @@
     "colors = ['blue', 'pink'] # setting the colour palette for the count plot\n",
     "plt.figure(figsize=(10, 7))\n",
     "sns.countplot(x='sex', data= penguins_complete, palette = colors)\n",
-    "plt.title('Count of Penguins by Sex')\n",
+    "font1 = {'family':'serif','color':'black','size':20}\n",
+    "plt.title('Count of Penguins by Sex', fontdict = font1)\n",
     "plt.xlabel('Sex')\n",
     "plt.ylabel('Count')\n",
     "plt.show()"
@@ -626,7 +627,8 @@
    "source": [
     "plt.figure(figsize = (10, 7))\n",
     "sns.countplot (x = 'species', data = penguins_complete)\n",
-    "plt.title ('Frequency of Penguin Species')\n",
+    "font1 = {'family':'serif','color':'black','size':20}\n",
+    "plt.title ('Frequency of Penguin Species', fontdict = font1)\n",
     "plt.xlabel ('Species')\n",
     "plt.ylabel ('Count')\n",
     "plt.show()"
@@ -648,10 +650,213 @@
     "colors = ['red', 'yellow', 'indigo'] # defining a list of colors\n",
     "plt.figure(figsize=(10, 7))\n",
     "sns.countplot(x='island', data = Penguins, palette = colors) # using palette function to set colors of count plot\n",
-    "plt.title('Count of Penguins on Each Island')\n",
+    "font1 = {'family':'serif','color':'black','size':20}\n",
+    "plt.title('Count of Penguins on Each Island', fontdict = font1)\n",
     "plt.xlabel('Island')\n",
     "plt.ylabel('Count')\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, I will look at the quantitative data: bill length, bill depth, flipper length and body mass."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Bill Length (in mm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.histplot(data = penguins_complete, x = \"bill_length_mm\", kde = True)\n",
+    "font1 = {'family':'serif','color':'black','size':20}\n",
+    "plt.title('Bill Length of Penguins (in mm)', fontdict = font1)\n",
+    "plt.xlabel('Bill length')\n",
+    "plt.ylabel('Count')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Bill Depth (in mm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.histplot(data = penguins_complete, x = \"bill_depth_mm\", kde = True)\n",
+    "font1 = {'family':'serif','color':'black','size':20}\n",
+    "plt.title('Bill Depth of Penguins (in mm)', fontdict = font1)\n",
+    "plt.xlabel('Bill Depth')\n",
+    "plt.ylabel('Count')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Flipper Length (in mm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.histplot(data = penguins_complete, x = \"flipper_length_mm\", kde = True)\n",
+    "font1 = {'family':'serif','color':'black','size':20}\n",
+    "plt.title('Flipper Length of Penguins (in mm)', fontdict = font1)\n",
+    "plt.xlabel('Flipper Length')\n",
+    "plt.ylabel('Count')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Body Mass (in grams)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.histplot(data = penguins_complete, x = \"body_mass_g\", kde = True)\n",
+    "font1 = {'family':'serif','color':'black','size':20}\n",
+    "plt.title('Body Mass of Penguins (in grams)', fontdict = font1)\n",
+    "plt.xlabel('Body Mass')\n",
+    "plt.ylabel('Count')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bill Length by gender, island and species "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.subplot(1, 3, 1)\n",
+    "sns.histplot(data=penguins_complete, x='bill_length_mm', hue='sex', multiple = 'stack')\n",
+    "plt.figure(figsize = (20, 10))\n",
+    "\n",
+    "plt.subplot(1, 3, 2)\n",
+    "sns.histplot(data=penguins_complete, x='bill_length_mm', hue='island', multiple = 'stack')\n",
+    "plt.figure(figsize = (12, 5))\n",
+    "\n",
+    "plt.subplot(1, 3, 3)\n",
+    "sns.histplot(data=penguins_complete, x='bill_length_mm', hue='species', multiple = 'stack')\n",
+    "plt.figure(figsize = (12, 5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bill Depth by gender, island and species "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.subplot(1, 3, 1)\n",
+    "sns.histplot(data=penguins_complete, x='bill_depth_mm', hue='sex', multiple = 'stack')\n",
+    "plt.figure(figsize = (20, 10))\n",
+    "\n",
+    "plt.subplot(1, 3, 2)\n",
+    "sns.histplot(data=penguins_complete, x='bill_depth_mm', hue='island', multiple = 'stack')\n",
+    "plt.figure(figsize = (12, 5))\n",
+    "\n",
+    "plt.subplot(1, 3, 3)\n",
+    "sns.histplot(data=penguins_complete, x='bill_depth_mm', hue='species', multiple = 'stack')\n",
+    "plt.figure(figsize = (12, 5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Flipper length by gender, island and species"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.subplot(1, 3, 1)\n",
+    "sns.histplot(data=penguins_complete, x='flipper_length_mm', hue='sex', multiple = 'stack')\n",
+    "plt.figure(figsize = (20, 10))\n",
+    "\n",
+    "plt.subplot(1, 3, 2)\n",
+    "sns.histplot(data=penguins_complete, x='flipper_length_mm', hue='island', multiple = 'stack')\n",
+    "plt.figure(figsize = (12, 5))\n",
+    "\n",
+    "plt.subplot(1, 3, 3)\n",
+    "sns.histplot(data=penguins_complete, x='flipper_length_mm', hue='species', multiple = 'stack')\n",
+    "plt.figure(figsize = (12, 5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Body mass by gender, island and species"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.subplot(1, 3, 1)\n",
+    "sns.histplot(data=penguins_complete, x='body_mass_g', hue='sex', multiple = 'stack')\n",
+    "plt.figure(figsize = (20, 10))\n",
+    "\n",
+    "plt.subplot(1, 3, 2)\n",
+    "sns.histplot(data=penguins_complete, x='body_mass_g', hue='island', multiple = 'stack')\n",
+    "plt.figure(figsize = (12, 5))\n",
+    "\n",
+    "plt.subplot(1, 3, 3)\n",
+    "sns.histplot(data=penguins_complete, x='body_mass_g', hue='species', multiple = 'stack')\n",
+    "plt.figure(figsize = (12, 5))"
    ]
   },
   {
@@ -666,7 +871,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sns.boxplot(data = penguins_complete, x = 'body_mass_g')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.histplot(data=penguins_complete, x='flipper_length_mm', hue='species', multiple = 'stack')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.histplot(data=penguins_complete, x=\"flipper_length_mm\", hue=\"sex\", multiple=\"dodge\", shrink=.8)"
+   ]
   }
  ],
  "metadata": {
