--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -558,11 +558,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -625,13 +620,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize = (10, 7))\n",
-    "sns.countplot (x = 'species', data = penguins_complete)\n",
+    "prob_species = penguins_complete['species'].value_counts(normalize=True) # getting the probability of each penguin species\n",
+    "Species = ['Adelie', 'Gentoo', 'Chinstrap']\n",
+    "species_probabilities = [0.442, 0.360, 0.198] # probabilities for each species as set out by above prob_species value counts function\n",
+    "\n",
+    "fig = plt.figure(figsize =(10, 7)) #setting the size of the figure\n",
+    "explode = (0.0, 0.1, 0)\n",
     "font1 = {'family':'serif','color':'black','size':20}\n",
-    "plt.title ('Frequency of Penguin Species', fontdict = font1)\n",
-    "plt.xlabel ('Species')\n",
-    "plt.ylabel ('Count')\n",
-    "plt.show()"
+    "plt.pie(species_probabilities, explode = explode, labels = Species, autopct='%1.1f%%') # double percentage sign is required to show % sign\n",
+    "# using auto percentage function\n",
+    "plt.legend(title = \"Species\") # setting legend\n",
+    "plt.title('Penguin Species Distribution', fontdict = font1) # setting title\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -677,7 +677,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.histplot(data = penguins_complete, x = \"bill_length_mm\", kde = True)\n",
+    "sns.histplot(data = penguins_complete, x = \"bill_length_mm\")\n",
     "font1 = {'family':'serif','color':'black','size':20}\n",
     "plt.title('Bill Length of Penguins (in mm)', fontdict = font1)\n",
     "plt.xlabel('Bill length')\n",
@@ -698,7 +698,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.histplot(data = penguins_complete, x = \"bill_depth_mm\", kde = True)\n",
+    "sns.histplot(data = penguins_complete, x = \"bill_depth_mm\", kde = True) # setting kde = true to show distribution curve\n",
     "font1 = {'family':'serif','color':'black','size':20}\n",
     "plt.title('Bill Depth of Penguins (in mm)', fontdict = font1)\n",
     "plt.xlabel('Bill Depth')\n",
@@ -740,6 +740,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sns.boxplot(data = penguins_complete, x = 'body_mass_g')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sns.histplot(data = penguins_complete, x = \"body_mass_g\", kde = True)\n",
     "font1 = {'family':'serif','color':'black','size':20}\n",
     "plt.title('Body Mass of Penguins (in grams)', fontdict = font1)\n",
@@ -768,17 +777,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.subplot(1, 3, 1)\n",
-    "sns.histplot(data=penguins_complete, x='bill_length_mm', hue='sex', multiple = 'stack')\n",
-    "plt.figure(figsize = (20, 10))\n",
+    "fig, axs = plt.subplots(3, 1, figsize=(12, 15))\n",
+    "sns.swarmplot(data=penguins_complete, x='bill_length_mm', hue='sex', ax=axs[0])\n",
+    "sns.swarmplot(data=penguins_complete, x='bill_length_mm', hue='island', ax=axs[1])\n",
+    "sns.swarmplot(data=penguins_complete, x='bill_length_mm', hue='species', ax=axs[2])\n",
     "\n",
-    "plt.subplot(1, 3, 2)\n",
-    "sns.histplot(data=penguins_complete, x='bill_length_mm', hue='island', multiple = 'stack')\n",
-    "plt.figure(figsize = (12, 5))\n",
+    "axs[0].set_title('Bill Length by Sex')\n",
+    "axs[1].set_title('Bill Length by Island')\n",
+    "axs[2].set_title('Bill Length by Species')\n",
     "\n",
-    "plt.subplot(1, 3, 3)\n",
-    "sns.histplot(data=penguins_complete, x='bill_length_mm', hue='species', multiple = 'stack')\n",
-    "plt.figure(figsize = (12, 5))"
+    "plt.subplots_adjust(hspace = 0.5)\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -794,17 +804,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.subplot(1, 3, 1)\n",
-    "sns.histplot(data=penguins_complete, x='bill_depth_mm', hue='sex', multiple = 'stack')\n",
-    "plt.figure(figsize = (20, 10))\n",
+    "fig, axs = plt.subplots(3, 1, figsize=(10, 15))\n",
+    "sns.histplot(data=penguins_complete, x='bill_depth_mm', hue='sex', multiple = 'stack', ax=axs[0])\n",
+    "sns.histplot(data=penguins_complete, x='bill_depth_mm', hue='island', multiple = 'stack', ax=axs[1])\n",
+    "sns.histplot(data=penguins_complete, x='bill_depth_mm', hue='species', multiple = 'stack', ax=axs[2])\n",
     "\n",
-    "plt.subplot(1, 3, 2)\n",
-    "sns.histplot(data=penguins_complete, x='bill_depth_mm', hue='island', multiple = 'stack')\n",
-    "plt.figure(figsize = (12, 5))\n",
+    "axs[0].set_title('Bill Depth by Sex')\n",
+    "axs[1].set_title('Bill Depth by Island')\n",
+    "axs[2].set_title('Bill Depth by Species')\n",
     "\n",
-    "plt.subplot(1, 3, 3)\n",
-    "sns.histplot(data=penguins_complete, x='bill_depth_mm', hue='species', multiple = 'stack')\n",
-    "plt.figure(figsize = (12, 5))"
+    "plt.subplots_adjust(hspace = 0.5)\n",
+    "\n",
+    "#plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -820,17 +832,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.subplot(1, 3, 1)\n",
-    "sns.histplot(data=penguins_complete, x='flipper_length_mm', hue='sex', multiple = 'stack')\n",
-    "plt.figure(figsize = (20, 10))\n",
+    "fig, axs = plt.subplots(3, 1, figsize=(10, 15))\n",
+    "colors = ('red', 'blue', 'pink')\n",
+    "sns.histplot(data=penguins_complete, x='flipper_length_mm', hue='sex', multiple=\"dodge\", shrink=.8, ax=axs[0])\n",
+    "sns.histplot(data=penguins_complete, x='flipper_length_mm', hue='island', multiple=\"dodge\", shrink=.8, ax=axs[1])\n",
+    "sns.histplot(data=penguins_complete, x='flipper_length_mm', hue='species', multiple=\"dodge\", shrink=.8, palette = colors, ax=axs[2])\n",
+    "# multiple = dodge sets the bars side by side in groups\n",
     "\n",
-    "plt.subplot(1, 3, 2)\n",
-    "sns.histplot(data=penguins_complete, x='flipper_length_mm', hue='island', multiple = 'stack')\n",
-    "plt.figure(figsize = (12, 5))\n",
+    "axs[0].set_title('Flipper Length by Sex')\n",
+    "axs[1].set_title('Flipper Length by Island')\n",
+    "axs[2].set_title('Flipper Length by Species')\n",
     "\n",
-    "plt.subplot(1, 3, 3)\n",
-    "sns.histplot(data=penguins_complete, x='flipper_length_mm', hue='species', multiple = 'stack')\n",
-    "plt.figure(figsize = (12, 5))"
+    "plt.subplots_adjust(hspace = 0.5)\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -846,33 +861,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.subplot(1, 3, 1)\n",
-    "sns.histplot(data=penguins_complete, x='body_mass_g', hue='sex', multiple = 'stack')\n",
-    "plt.figure(figsize = (20, 10))\n",
+    "fig, axs = plt.subplots(3, 1, figsize=(10, 15))\n",
+    "sns.histplot(data=penguins_complete, x='body_mass_g', hue='sex', multiple = 'stack', ax=axs[0])\n",
+    "sns.histplot(data=penguins_complete, x='body_mass_g', hue='island', multiple = 'stack', ax=axs[1])\n",
+    "sns.histplot(data=penguins_complete, x='body_mass_g', hue='species', multiple = 'stack', ax=axs[2])\n",
     "\n",
-    "plt.subplot(1, 3, 2)\n",
-    "sns.histplot(data=penguins_complete, x='body_mass_g', hue='island', multiple = 'stack')\n",
-    "plt.figure(figsize = (12, 5))\n",
+    "axs[0].set_title('Body Mass by Sex')\n",
+    "axs[1].set_title('Body Mass by Island')\n",
+    "axs[2].set_title('Body Mass by Species')\n",
     "\n",
-    "plt.subplot(1, 3, 3)\n",
-    "sns.histplot(data=penguins_complete, x='body_mass_g', hue='species', multiple = 'stack')\n",
-    "plt.figure(figsize = (12, 5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sns.boxplot(data = penguins_complete, x = 'body_mass_g')\n",
+    "plt.subplots_adjust(hspace = 0.5)\n",
+    "\n",
+    "#plt.tight_layout()\n",
     "plt.show()"
    ]
   },
@@ -882,16 +882,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.histplot(data=penguins_complete, x='flipper_length_mm', hue='species', multiple = 'stack')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sns.histplot(data=penguins_complete, x=\"flipper_length_mm\", hue=\"sex\", multiple=\"dodge\", shrink=.8)"
+    "sns.pairplot(penguins_complete, hue=\"species\")"
    ]
   }
  ],
