updating readme and adding image etc

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -16,10 +16,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The project is to create a notebook investigating the variables and data points within the well-known iris flower data set associated with Ronald A Fisher.\n",
-    "• In the notebook, you should discuss the classification of each variable within the data set according to common variable types and scales of measurement in mathematics, statistics, and Python.\n",
-    "• Select, demonstrate, and explain the most appropriate summary statistics to describe each variable.\n",
-    "• Select, demonstrate, and explain the most appropriate plot(s) for each variable."
+    "> - The project is to create a notebook investigating the variables and data points within the well-known iris flower data set associated with Ronald A Fisher.\n",
+    "> - In the notebook, you should discuss the classification of each variable within the data set according to common variable types and scales of measurement in mathematics, statistics, and Python.\n",
+    "> - Select, demonstrate, and explain the most appropriate summary statistics to describe each variable.\n",
+    "> - Select, demonstrate, and explain the most appropriate plot(s) for each variable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Iris Flower Data Set is a multivariate data set which originated in a 1936 paper by Ronald Fisher.\n",
+    "The data itself regarding the Iris Setosa, Iris Virginica and Iris Versicolour flowers were collected by Dr Edgar Anderson in Canada.\n",
+    "The data set is used for multivariate data analysis and in Machine Learning. \n",
+    "It contains 50 samples from each of three species of Iris Flower:\n",
+    "- Iris Setosa, Iris Versicolour and Iris Virginica\n",
+    "\n",
+    "For each species type, there are 4 measurements available, measured in centimeters:\n",
+    "- Septal Length\n",
+    "- Septal Width\n",
+    "- Petal Length\n",
+    "- Petal Width"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_Obtaining the dataset_\n",
+    "I downloaded the Iris Data Set from UC Irvine Machine Learning which can be assessed at https://archive.ics.uci.edu/dataset/53/iris. I stored this data in a CSV file in my repository and used the Pandas library to read the data from the CSV file to allow me to manipulate the data with Python code.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "!['Image of the Iris Flower Species'](https://miro.medium.com/v2/resize:fit:3500/1*f6KbPXwksAliMIsibFyGJw.png)\n"
    ]
   },
   {
@@ -33,10 +65,9 @@
     "import pandas as pd \n",
     "import seaborn as sns \n",
     "import matplotlib.pyplot as plt \n",
-    "from tabulate import tabulate\n",
     "import sys\n",
     "\n",
-    "# I have downloaded the csv data file to the directory. It can also be gotten online at https://archive.ics.uci.edu/dataset/53/iris\n",
+    "\n",
     "iris_data = pd.read_csv(\"IrisData.csv\", header=None) # setting that there is no header so it is recognised that the data begins from line 1\n",
     "column_names = [\"Sepal_Length(cm)\", \"Sepal_Width(cm)\", \"Petal_Length(cm)\", \"Petal_Width(cm)\", \"Species\"] # I have assigned names to each of the columns\n",
     "iris_data = pd.read_csv(\"IrisData.csv\", names = column_names, header=None)"
